.provarCaches/00D410000011HE0EAM/objects/rstk__ictrstdmd__c.object
<CustomObject>
    <description>ictrstdmd__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Inter-Site Demand</relationshipLabel>
        <relationshipName>divictrstdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_dmdsts__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>DMDSTS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_dolchgoutlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>DOLCHGOUTLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_dolchgoutmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>DOLCHGOUTMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_dolchgoutohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>DOLCHGOUTOHDFRNG</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_dolchgoutohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>DOLCHGOUTOHDLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_dolchgoutohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>DOLCHGOUTOHDMACH</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_dolchgoutohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>DOLCHGOUTOHDMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_dolchgoutsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>DOLCHGOUTSUBLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_dolchgoutsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>DOLCHGOUTSUBMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_dtereqd__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>DTEREQD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_invuom__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>invuom_ui</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>Inter-Site Demand</relationshipLabel>
        <relationshipName>Inter_Site_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Inter-Site Demand</relationshipLabel>
        <relationshipName>Inter_Site_Demand1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_itemrev__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>itemrev_ui</label>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>Inter-Site Demand</relationshipLabel>
        <relationshipName>Inter_Site_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_ordno__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>ORDNO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_proj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>proj_ui</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Inter-Site Demand</relationshipLabel>
        <relationshipName>Inter_Site_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_qtyalloc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>QTYALLOC</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_qtyiss__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>QTYISS</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_qtyoutstdg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>QTYOUTSTDG</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_qtyreq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>QTYREQ</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>site_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Inter-Site Demand (site_ui)</relationshipLabel>
        <relationshipName>Inter_Site_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_supsite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>supsite_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Inter-Site Demand (supsite_ui)</relationshipLabel>
        <relationshipName>Inter_Site_Demand1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_ucstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>UCSTLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_ucstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>UCSTMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_ucstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>UCSTOHDFRNG</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_ucstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>UCSTOHDLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_ucstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>UCSTOHDMACH</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_ucstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>UCSTOHDMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_ucstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>UCSTSUBLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_ucstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>UCSTSUBMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_varcstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>VARCSTLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_varcstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>VARCSTMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_varcstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>VARCSTOHDFRNG</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_varcstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>VARCSTOHDLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_varcstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>VARCSTOHDMACH</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_varcstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>VARCSTOHDMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_varcstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>VARCSTSUBLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_varcstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>VARCSTSUBMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstdmd_wbs__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>WBS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Inter-Site Demand</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ICTRSTDMD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inter-Site Demand</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>